@@ -1,4 +1,5 @@
 Version 3.4.3 (2011-??-??)
+	Fixed bug where the autoresize plugin wouldn't reduce the editors height on Chrome.
 	Fixed bug where table size inputs were to small for values with size units.
 	Fixed bug where table cell/row size input values were not validated.
 	Fixed bug where menu item line-height would be set to wrong value by external styles.
